Add official cypress schema

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,12 @@
                 "cypress.json"
             ],
             "url": "./cypress.schema.json"
+        },
+        {
+            "fileMatch": [
+                "cypress.json"
+            ],
+            "url": "https://on.cypress.io/cypress.schema.json"
         }
     ],
     "cSpell.words": [
