--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
   },
   "homepage": "https://github.com/askirmas/configs#readme",
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.10.4",
     "@mysticatea/eslint-plugin": "^13.0.0",
     "@types/jest": "^26.0.0",
     "@types/node": "^14.0.13",
-    "eslint": "^7.2.0",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-no-use-extend-native": "^0.5.0",
     "eslint-plugin-optimize-regex": "^1.2.0",
@@ -44,21 +46,26 @@
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-unicorn": "^20.1.0",
     "git-hooks-wrapper": "^0.7.1",
-    "jest": "^26.0.1",
-    "stylelint": "^13.6.1",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.1.0",
-    "ts-jest": "^26.1.0",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.5"
+    "ts-jest": "^26.1.0"
   },
   "devDependencies": {
+    "@4tw/cypress-drag-drop": "^1.4.0",
+    "@cypress/browserify-preprocessor": "^3.0.1",
+    "@cypress/code-coverage": "^3.8.1",
+    "cypress": "^4.11.0",
+    "cypress-plugin-snapshots": "^1.4.3",
+    "eslint": "^7.5.0",
+    "jest": "^26.1.0",
     "np": "^6.2.4",
-    "stylelint-config-sass-guidelines": "^7.0.0"
+    "stylelint": "^13.6.1",
+    "stylelint-config-sass-guidelines": "^7.0.0",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.7"
   },
   "peerDependencies": {
     "@4tw/cypress-drag-drop": ">= 1.3.1",
-    "@babel/plugin-proposal-class-properties": ">= 7.10.1",
     "@cypress/browserify-preprocessor": ">= 3.0",
     "@cypress/code-coverage": ">= 3.0",
     "@zeit/next-css": ">= 1.0.1",
