--- a/package.json
+++ b/package.json
@@ -51,18 +51,7 @@
     "ts-jest": "^26.1.0"
   },
   "devDependencies": {
-    "@4tw/cypress-drag-drop": "^1.4.0",
-    "@cypress/browserify-preprocessor": "^3.0.1",
-    "@cypress/code-coverage": "^3.8.1",
-    "cypress": "^4.11.0",
-    "cypress-plugin-snapshots": "^1.4.3",
-    "eslint": "^7.5.0",
-    "jest": "^26.1.0",
-    "np": "^6.2.4",
-    "stylelint": "^13.6.1",
-    "stylelint-config-sass-guidelines": "^7.0.0",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.7"
+    "@kirmas/configs-dev-dependencies": "file:devDependencies"
   },
   "peerDependencies": {
     "@4tw/cypress-drag-drop": ">= 1.3.1",
