--- a/devDependencies/package.json
+++ b/devDependencies/package.json
@@ -23,6 +23,8 @@
     "next-images": "^1.4.0",
     "np": "^6.3.2",
     "nyc": "^15.1.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "stylelint": "^13.6.1",
     "stylelint-config-sass-guidelines": "^7.0.0",
     "ts-node": "^8.10.2",
