--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@mysticatea/eslint-plugin": "^13.0.0",
     "@types/jest": "^26.0.0",
     "@types/node": "^14.0.13",
+    "@types/react": "^16.9.43",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-no-use-extend-native": "^0.5.0",
     "eslint-plugin-optimize-regex": "^1.2.0",
