--- a/package.json
+++ b/package.json
@@ -2,8 +2,23 @@
   "name": "@kirmas/configs",
   "version": "0.1.1",
   "private": true,
-  "description": "My confis for reuse",
+  "description": "My configs for reuse",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/askirmas/configs.git"
+  },
+  "author": "",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/askirmas/configs/issues"
+  },
+  "homepage": "https://github.com/askirmas/configs#readme",
+  "files": [
+    "cypress"
+  ],
   "scripts": {
+    "precompile/cypress": "rm -rf cypress",
+    "compile/cypress": "tsc --project tsconfig.cypress.json",
     "release:product": "np $(git-hooks-wrapper semver_inc product)",
     "release:feature": "np $(git-hooks-wrapper semver_inc feature)",
     "release:hotfix": "np $(git-hooks-wrapper semver_inc hotfix)",
@@ -21,16 +36,6 @@
     "-preversion": "./preversion.sh",
     "-postversion": "git push && git push --tags && git switch master && git merge -X theirs release --no-edit && git push && npm update --dd"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/askirmas/configs.git"
-  },
-  "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/askirmas/configs/issues"
-  },
-  "homepage": "https://github.com/askirmas/configs#readme",
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
