--- a/devDependencies/package.json
+++ b/devDependencies/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kirmas/configs-dev-dependencies",
+  "name": "@kirmas/configs-dev",
   "version": "1.0.0",
   "description": "",
   "scripts": {
@@ -9,21 +9,16 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@4tw/cypress-drag-drop": "^1.4.0",
-    "@cypress/browserify-preprocessor": "^3.0.1",
-    "@cypress/code-coverage": "^3.8.1",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "cypress": "^4.11.0",
-    "cypress-plugin-snapshots": "^1.4.3",
     "eslint": "^7.5.0",
     "istanbul-lib-coverage": "^3.0.0",
     "jest": "^26.1.0",
-    "js-base64": "^2.5.2",
     "next": "^9.4.4",
     "next-images": "^1.4.0",
     "np": "^6.3.2",
-    "nyc": "^15.1.0",
+    "npm-run-all": "^4.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "stylelint": "^13.6.1",
