--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
     "@babel/plugin-proposal-optional-chaining": "^7.10.4",
+    "@kirmas/configs-cypress": "file:src/cypress",
     "@mysticatea/eslint-plugin": "^13.0.0",
     "@types/jest": "^26.0.0",
     "@types/node": "^14.0.13",
@@ -57,7 +58,7 @@
     "ts-jest": "^26.1.0"
   },
   "devDependencies": {
-    "@kirmas/configs-dev-dependencies": "file:devDependencies"
+    "@kirmas/configs-dev": "file:devDependencies"
   },
   "peerDependencies": {
     "@4tw/cypress-drag-drop": ">= 1.3.1",
