--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "homepage": "https://github.com/askirmas/configs#readme",
   "files": [
-    "cypress"
+    "cypress",
+    "cypress.json"
   ],
   "scripts": {
     "precompile/cypress": "rm -rf cypress",
