--- a/devDependencies/package.json
+++ b/devDependencies/package.json
@@ -15,7 +15,7 @@
     "eslint": "^7.5.0",
     "istanbul-lib-coverage": "^3.0.0",
     "jest": "^26.1.0",
-    "next": "^9.4.4",
+    "next": "9.3.6",
     "next-images": "^1.4.0",
     "np": "^6.3.2",
     "npm-run-all": "^4.1.5",
