--- a/devDependencies/package.json
+++ b/devDependencies/package.json
@@ -9,18 +9,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@zeit/next-css": "^1.0.1",
-    "@zeit/next-sass": "^1.0.1",
     "cypress": "^4.11.0",
     "eslint": "^7.5.0",
     "istanbul-lib-coverage": "^3.0.0",
     "jest": "^26.1.0",
-    "next": "9.3.6",
-    "next-images": "^1.4.0",
     "np": "^6.3.2",
     "npm-run-all": "^4.1.5",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "sass": "^1.26.10",
     "stylelint": "^13.6.1",
     "stylelint-config-sass-guidelines": "^7.0.0",
     "ts-node": "^8.10.2",
