--- a/next/package.json
+++ b/next/package.json
@@ -9,6 +9,7 @@
     "@types/react": "^16.9.43",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "next": "9.3.6",
     "next-images": "^1.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
