--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cypress.json"
   ],
   "scripts": {
+    "modules.clear": "find * -type d -iname node_modules | xargs -d'\n' -I{} rm -rf {}",
     "precompile/cypress": "rm -rf cypress",
     "compile/cypress": "tsc --project tsconfig.cypress.json",
     "release:product": "np $(git-hooks-wrapper semver_inc product)",
@@ -62,16 +63,5 @@
   },
   "devDependencies": {},
   "peerDependencies": {
-    "@4tw/cypress-drag-drop": ">= 1.3.1",
-    "@cypress/browserify-preprocessor": ">= 3.0",
-    "@cypress/code-coverage": ">= 3.0",
-    "@zeit/next-css": ">= 1.0.1",
-    "@zeit/next-sass": ">= 1.0.1",
-    "cypress": ">= 4.0",
-    "cypress-plugin-snapshots": ">= 1.0",
-    "istanbul-lib-coverage": ">= 3.0",
-    "next": "9.3.6",
-    "next-images": ">= 1.3.1",
-    "nyc": ">= 15.0"
   }
 }
