--- a/cypress/package.json
+++ b/cypress/package.json
@@ -1,20 +1,36 @@
 {
-    "name": "@kirmas/configs-cypress",
-    "version": "1.0.0",
-    "description": "Cypress wrap",
-    "scripts": {},
-    "keywords": [],
-    "author": "",
-    "license": "MIT",
-    "devDependencies": {
-        "cypress": "^4.11.0"
-    },
-    "dependencies": {
-        "@4tw/cypress-drag-drop": "^1.4.0",
-        "@cypress/browserify-preprocessor": "^3.0.1",
-        "@cypress/code-coverage": "^3.8.1",
-        "cypress-plugin-snapshots": "^1.4.3",
-        "js-base64": "^2.5.2",
-        "nyc": "^15.1.0"
-    }
+  "name": "@kirmas/template-cypress",
+  "version": "1.0.0",
+  "description": "Cypress wrap",
+  "files": [
+    "plugins",
+    "support",
+    "tsconfig.json",
+    "config.json",
+    ".eslintrc.json",
+    "cy.sh"
+  ],
+  "bin": {
+    "cy": "cy.sh"
+  },
+  "scripts": {
+    "precompile": "rm -rf dist plugins support",
+    "compile": "tsc --project tsconfig.compile.json",
+    "postcompile": "mv dist/plugins . && mv dist/support ."
+  },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
+  "devDependencies": {},
+  "dependencies": {
+    "@4tw/cypress-drag-drop": "^1.4.0",
+    "@cypress/browserify-preprocessor": "^3.0.1",
+    "@cypress/code-coverage": "^3.8.1",
+    "cypress": "^4.11.0",
+    "cypress-image-snapshot": "^3.1.1",
+    "cypress-plugin-snapshots": "^1.4.3",
+    "cypress-visual-regression": "^1.4.0",
+    "js-base64": "2.5.2",
+    "nyc": "^15.1.0"
+  }
 }
