--- a/next/package.json
+++ b/next/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kirmas/configs-next",
+  "name": "@kirmas/template-next",
   "version": "1.0.0",
   "scripts": {},
   "keywords": [],
@@ -13,6 +13,7 @@
     "next-images": "^1.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "sass": "^1.26.10",
     "sass-loader": "^9.0.2"
   }
 }
