--- a/devDependencies/package.json
+++ b/devDependencies/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kirmas/configs-dev",
+  "name": "@kirmas/template-dev",
   "version": "1.0.0",
   "description": "",
   "scripts": {
@@ -10,11 +10,11 @@
   "license": "MIT",
   "dependencies": {
     "eslint": "^7.5.0",
+    "git-hooks-wrapper": "^0.7.1",
     "istanbul-lib-coverage": "^3.0.0",
     "jest": "^26.1.0",
     "np": "^6.3.2",
     "npm-run-all": "^4.1.5",
-    "sass": "^1.26.10",
     "stylelint": "^13.6.1",
     "stylelint-config-sass-guidelines": "^7.0.0",
     "ts-node": "^8.10.2",
