--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "files": [],
   "scripts": {
     "modules.clear": "find * -type d -iname node_modules | xargs -d'\n' -I{} rm -rf {}",
-    "precompile/cypress": "rm -rf cypress",
-    "compile/cypress": "cd src/cypress && npm run compile --outDir $PWD/cypress",
+    "compile/cypress": "cd cypress && npm run compile",
     "release:product": "np $(git-hooks-wrapper semver_inc product)",
     "release:feature": "np $(git-hooks-wrapper semver_inc feature)",
     "release:hotfix": "np $(git-hooks-wrapper semver_inc hotfix)",
