--- a/cypress/tsconfig.compile.json
+++ b/cypress/tsconfig.compile.json
@@ -6,8 +6,7 @@
     "target": "ES5",
     "resolveJsonModule": true,
     "outDir": "dist",
-    "rootDir": "src",
-    "declaration": true
+    "rootDir": "src"
   },
   "include": [
     "src/**/*.js",
