--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,13 +14,13 @@
         },
         {
             "fileMatch": [
-                "cypress.json"
+                "cypress/config.json"
             ],
-            "url": "./src/cypress/schema.json"
+            "url": "./cypress/schema.json"
         },
         {
             "fileMatch": [
-                "cypress.json"
+                "cypress/config.json"
             ],
             "url": "https://on.cypress.io/cypress.schema.json"
         }
