Add vscode extensions list to sort out

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -13,6 +13,61 @@
     "stylelint.vscode-stylelint",
     "tnrich.vscode-extension-open-cypress",
     "waderyan.gitblame",
+    "rogalmic.bash-debug",
+    "mads-hartmann.bash-ide-vscode",
+    "salbert.comment-ts",
+    "ryanluker.vscode-coverage-gutters",
+    "josefbiehler.cypress-fixture-intellisense",
+    "denoland.vscode-deno",
+    "bierner.markdown-mermaid",
+    "bpruitt-goddard.mermaid-markdown-syntax-highlighting",
+    "codemooseus.vscode-devtools-for-chrome",
+    "david-rickard.git-diff-and-merge-tool",
+    "dbaeumer.vscode-eslint",
+    "donjayamanne.githistory",
+    "eamodio.gitlens",
+    "ecmel.vscode-html-css",
+    "eriklynd.json-tools",
+    "esbenp.prettier-vscode",
+    "fabiospampinato.vscode-diff",
+    "formulahendry.github-actions",
+    "geeklearningio.graphviz-markdown-preview",
+    "GitHub.vscode-pull-request-github",
+    "GitLab.gitlab-workflow",
+    "Gruntfuggly.todo-tree",
+    "huizhou.githd",
+    "ivanhofer.git-assistant",
+    "jingkaizhao.vscode-redux-devtools",
+    "joaompinto.vscode-graphviz",
+    "joelday.docthis",
+    "KnisterPeter.vscode-github",
+    "letmaik.git-tree-compare",
+    "lonefy.vscode-JS-CSS-HTML-formatter",
+    "me-dutour-mathieu.vscode-github-actions",
+    "mrmlnc.vscode-scss",
+    "ms-vscode.js-debug",
+    "ms-vscode.js-debug-companion",
+    "ms-vscode.js-debug-nightly",
+    "ms-vscode.node-debug",
+    "ms-vscode.node-debug2",
+    "ms-vscode.references-view",
+    "ms-vscode.vscode-js-profile-table",
+    "ms-vscode.vscode-typescript-tslint-plugin",
+    "msjsdiag.debugger-for-chrome",
+    "nickdemayo.vscode-json-editor",
+    "oliversturm.fix-json",
+    "redhat.vscode-yaml",
+    "richie5um2.vscode-sort-json",
+    "searKing.preview-vscode",
+    "shaharkazaz.git-merger",
+    "syler.sass-indented",
+    "timonwong.shellcheck",
+    "tintinweb.graphviz-interactive-preview",
+    "tomoyukim.vscode-mermaid-editor",
+    "vstirbu.vscode-mermaid-preview",
+    "Wscats.eno",
+    "ZainChen.json",
+    "Zignd.html-css-class-completion"
   ],
   "unwantedRecommendations": [
     "ms-vscode.vscode-typescript-tslint-plugin"
