--- a/jest.config.json
+++ b/jest.config.json
@@ -1,27 +1,1 @@
-{
-    "clearMocks": false,
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-        "**/*.[tj]s"
-    ],
-    "coverageThreshold": {
-        "global": {
-            "branches": 100,
-            "functions": 100,
-            "lines": 100,
-            "statements": 100
-        }
-    },
-    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.[tj]sx?$",
-    "transform": {
-        "\\.[tj]sx?$": "ts-jest"
-    },
-    "bail": 1,
-    "verbose": true,
-    "globals": {
-        "ts-jest": {
-            "tsConfig": "tsconfig.json"
-        }
-    },
-    "testEnvironment": "node"
-}
+jest/config.json
