Add jest functions snippet as project

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,8 @@
         {
             "fileMatch": [
                 "jest.json",
-                "jest.config.*json"
+                "jest.config.*json",
+                "jest/config.json"                
             ],
             "url": "https://askirmas.github.io/jest.schema.json"
         },
