Add jest-server template. Use mongo's new useFindAndModify. Delete danger mongoose methods

--- a/jest/config.json
+++ b/jest/config.json
@@ -26,6 +26,18 @@
       }    
     },
     {
+      "displayName": "server",
+      "rootDir": "server",
+      "preset": "ts-jest",
+      "collectCoverageFrom": [
+        "<rootDir>"
+      ],
+      "transform": {
+        "^.+\\.[tj]sx?$": "ts-jest"
+      },
+      "testEnvironment": "node"
+    },
+    {
       "displayName": "db@memory",
       "rootDir": "db",
       "transform": {
