Add separate json for coverage

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,12 @@
             "url": "https://askirmas.github.io/jest.schema.json"
         },
         {
+          "fileMatch": [
+            "*.coverage.json"
+          ],
+          "url": "https://askirmas.github.io/jest.schema.json#/properties/coverageThreshold"
+        },
+        {
             "fileMatch": [
                 "cypress.*json"
             ],
