--- a/package.json
+++ b/package.json
@@ -33,14 +33,15 @@
     "postspec": "nyc report",
     "-preversion": "./preversion.sh",
     "-postversion": "git push && git push --tags && git switch master && git merge -X theirs release --no-edit && git push && npm update --dd",
-    "mongo@mac.start": "brew services start mongodb-community",
-    "mongo@mac.stop": "brew services stop mongodb-community",
-    "mongo@mac.restart": "brew services restart mongodb-community"
+    "mongodb.start": "mongodb start",
+    "mongodb.stop": "mongodb stop",
+    "mongodb.restart": "mongodb restart"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
     "@babel/plugin-proposal-optional-chaining": "^7.10.4",
+    "@kirmas/mongodb": "file:mongodb",
     "@mysticatea/eslint-plugin": "^13.0.0",
     "@types/jest": "^26.0.0",
     "@types/node": "^14.0.13",
