--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
     "@babel/plugin-proposal-optional-chaining": "^7.10.4",
     "@kirmas/mongodb": "file:mongodb",
+    "@kirmas/nextjs": "file:nextjs",
     "@mysticatea/eslint-plugin": "^13.0.0",
     "@types/jest": "^26.0.0",
     "@types/node": "^14.0.13",
