Append mongoose and contracts subpackages

--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
     "@babel/plugin-proposal-optional-chaining": "^7.10.4",
+    "@kirmas/contracts": "file:contracts",
     "@kirmas/mongodb": "file:mongodb",
+    "@kirmas/mongoose": "file:mongoose",
     "@kirmas/nextjs": "file:nextjs",
     "@mysticatea/eslint-plugin": "^13.0.0",
     "@types/jest": "^26.0.0",
