--- a/package.json
+++ b/package.json
@@ -42,11 +42,11 @@
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
     "@babel/plugin-proposal-optional-chaining": "^7.10.4",
     "@kirmas/contracts": "file:contracts",
+    "@kirmas/jest": "file:jest",
     "@kirmas/mongodb": "file:mongodb",
     "@kirmas/mongoose": "file:mongoose",
     "@kirmas/nextjs": "file:nextjs",
     "@mysticatea/eslint-plugin": "^13.0.0",
-    "@types/jest": "^26.0.0",
     "@types/node": "^14.0.13",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-no-use-extend-native": "^0.5.0",
@@ -56,8 +56,7 @@
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-unicorn": "^20.1.0",
     "stylelint-config-standard": "^20.0.0",
-    "stylelint-order": "^4.1.0",
-    "ts-jest": "^26.1.0"
+    "stylelint-order": "^4.1.0"
   },
   "devDependencies": {},
   "peerDependencies": {}
