--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@kirmas/mongodb": "file:mongodb",
     "@kirmas/mongoose": "file:mongoose",
     "@kirmas/nextjs": "file:nextjs",
+    "@kirmas/nr": "file:nr",
     "@mysticatea/eslint-plugin": "^13.0.0",
     "@types/node": "^14.0.13",
     "eslint-plugin-import": "^2.21.2",
