--- a/jest/package.json
+++ b/jest/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "exit 0"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +17,11 @@
   "devDependencies": {
     "jest-json-schema": "^2.1.0",
     "typescript": "^4.0.2"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "np": {
+    "yarn": false
   }
 }
