--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,13 @@
             "url": "./schemas.schema.json"
         },
         {
+          "fileMatch": [
+              "*.hyper.*json",
+              "hyper.json"
+          ],
+          "url": "http://json-schema.org/draft-07/hyper-schema"
+        },
+        {
             "fileMatch": [
                 "jest.json",
                 "jest.config.*json",
