--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,102 +1,103 @@
 {
-    "json.schemas": [
-        {
-            "fileMatch": [
-                "*.schema.*json",
-                "schema.json"
-            ],
-            "url": "http://json-schema.org/draft-07/schema"
-        },
-        {
-            "fileMatch": [
-                "*.schemas.*json",
-                "schemas.json"
-            ],
-            "url": "./schemas.schema.json"
-        },
-        {
-          "fileMatch": [
-              "*.hyper.*json",
-              "hyper.json"
-          ],
-          "url": "http://json-schema.org/draft-07/hyper-schema"
-        },
-        {
-            "fileMatch": [
-                "jest.json",
-                "jest.config.*json",
-                "jest/config.json"                
-            ],
-            "url": "https://askirmas.github.io/jest.schema.json"
-        },
-        {
-          "fileMatch": [
-            "*.coverage.json"
-          ],
-          "url": "https://askirmas.github.io/jest.schema.json#/properties/coverageThreshold"
-        },
-        {
-            "fileMatch": [
-                "cypress.*json"
-            ],
-            "url": "./cypress/schema.json"
-        },
-        {
-            "fileMatch": [
-                "cypress.*json"
-            ],
-            "url": "https://on.cypress.io/cypress.schema.json"
-        },
-        {
-          "fileMatch": [
-            "nodemon.*json"
-          ],
-          "url": "https://json.schemastore.org/nodemon"
-        },
-        {
-          "fileMatch": [
-            "forever.*.json",
-            "*.forever.*json"
-          ],
-          "url": "./forever.schema.json"
-        }
-    ],
-    "files.watcherExclude": {
-        "**/.git/objects/**": true,
-        "**/.git/subtree-cache/**": true,
-        "**/.next/**": true,
-        "**/coverage/**": true,
-        "**/node_modules/*/**": true
+  "json.schemas": [
+    {
+      "fileMatch": [
+        "*.schema.*json",
+        "schema.json",
+        "*.hyper.*json",
+        "hyper.json"
+      ],
+      "url": "http://json-schema.org/draft-07/schema"
     },
-    "editor.tabSize": 2,
-    "editor.codeActionsOnSave": {
-        "source.fixAll": true,
-        "source.fixAll.tslint": false,
-        "source.fixAll.eslint": true
+    {
+      "fileMatch": [
+        "*.schemas.*json",
+        "schemas.json"
+      ],
+      "url": "./schemas.schema.json"
     },
-    "git.rebaseWhenSync": true,
-    "git.detectSubmodules": true,
-    "git.showProgress": true,
-    "git.pullTags": true,
-    "gitlens.blame.ignoreWhitespace": true,
-    "eslint.format.enable": true,
-    "eslint.lintTask.enable": true,
-    "eslint.probe": [
-        "javascript",
-        "javascriptreact",
-        "typescript",
-        "typescriptreact",
-        "html",
-        "markdown"
-    ],
-    "eslint.codeAction.showDocumentation": {
-        "enable": true
+    {
+      "fileMatch": [
+        "*.hyper.*json",
+        "hyper.json"
+      ],
+      "url": "http://json-schema.org/draft-07/hyper-schema"
     },
-    "css.validate": false,
-    "less.validate": false,
-    "scss.validate": false,
-    "typescript.tsdk": "node_modules/typescript/lib",
-    "cSpell.words": [
-    ],
-    "json.schemaDownload.enable": true
+    {
+      "fileMatch": [
+        "jest.json",
+        "jest.config.*json",
+        "jest/config.json"
+      ],
+      "url": "https://askirmas.github.io/jest.schema.json"
+    },
+    {
+      "fileMatch": [
+        "*.coverage.json"
+      ],
+      "url": "https://askirmas.github.io/jest.schema.json#/properties/coverageThreshold"
+    },
+    {
+      "fileMatch": [
+        "cypress.*json"
+      ],
+      "url": "./cypress/schema.json"
+    },
+    {
+      "fileMatch": [
+        "cypress.*json"
+      ],
+      "url": "https://on.cypress.io/cypress.schema.json"
+    },
+    {
+      "fileMatch": [
+        "nodemon.*json"
+      ],
+      "url": "https://json.schemastore.org/nodemon"
+    },
+    {
+      "fileMatch": [
+        "forever.*.json",
+        "*.forever.*json"
+      ],
+      "url": "./forever.schema.json"
+    }
+  ],
+  "files.watcherExclude": {
+    "**/.git/objects/**": true,
+    "**/.git/subtree-cache/**": true,
+    "**/.next/**": true,
+    "**/coverage/**": true,
+    "**/node_modules/*/**": true
+  },
+  "editor.tabSize": 2,
+  "editor.codeActionsOnSave": {
+    "source.fixAll": true,
+    "source.fixAll.tslint": false,
+    "source.fixAll.eslint": true
+  },
+  "git.rebaseWhenSync": true,
+  "git.detectSubmodules": true,
+  "git.showProgress": true,
+  "git.pullTags": true,
+  "gitlens.blame.ignoreWhitespace": true,
+  "eslint.format.enable": true,
+  "eslint.lintTask.enable": true,
+  "eslint.probe": [
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact",
+    "html",
+    "markdown"
+  ],
+  "eslint.codeAction.showDocumentation": {
+    "enable": true
+  },
+  "css.validate": false,
+  "less.validate": false,
+  "scss.validate": false,
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "cSpell.words": [],
+  "json.schemaDownload.enable": true
 }
